; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_services.c_init_async.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_services.c_init_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.async_header = type { void (%struct.async_header*)*, i32*, i8*, i8* }

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.async_header*, i32*, void (%struct.async_header*)*)* @init_async to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_async(%struct.async_header* %0, i32* %1, void (%struct.async_header*)* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.async_header*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca void (%struct.async_header*)*, align 8
  store %struct.async_header* %0, %struct.async_header** %5, align 8
  store i32* %1, i32** %6, align 8
  store void (%struct.async_header*)* %2, void (%struct.async_header*)** %7, align 8
  %8 = load i32, i32* @FALSE, align 4
  %9 = load i32, i32* @FALSE, align 4
  %10 = call i8* @CreateEventW(i32* null, i32 %8, i32 %9, i32* null)
  %11 = load %struct.async_header*, %struct.async_header** %5, align 8
  %12 = getelementptr inbounds %struct.async_header, %struct.async_header* %11, i32 0, i32 2
  store i8* %10, i8** %12, align 8
  %13 = icmp ne i8* %10, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %3
  %15 = load i32, i32* @FALSE, align 4
  store i32 %15, i32* %4, align 4
  br label %39

16:                                               ; preds = %3
  %17 = load i32, i32* @FALSE, align 4
  %18 = load i32, i32* @FALSE, align 4
  %19 = call i8* @CreateEventW(i32* null, i32 %17, i32 %18, i32* null)
  %20 = load %struct.async_header*, %struct.async_header** %5, align 8
  %21 = getelementptr inbounds %struct.async_header, %struct.async_header* %20, i32 0, i32 3
  store i8* %19, i8** %21, align 8
  %22 = icmp ne i8* %19, null
  br i1 %22, label %29, label %23

23:                                               ; preds = %16
  %24 = load %struct.async_header*, %struct.async_header** %5, align 8
  %25 = getelementptr inbounds %struct.async_header, %struct.async_header* %24, i32 0, i32 2
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 @CloseHandle(i8* %26)
  %28 = load i32, i32* @FALSE, align 4
  store i32 %28, i32* %4, align 4
  br label %39

29:                                               ; preds = %16
  %30 = load void (%struct.async_header*)*, void (%struct.async_header*)** %7, align 8
  %31 = load %struct.async_header*, %struct.async_header** %5, align 8
  %32 = getelementptr inbounds %struct.async_header, %struct.async_header* %31, i32 0, i32 0
  store void (%struct.async_header*)* %30, void (%struct.async_header*)** %32, align 8
  %33 = load i32*, i32** %6, align 8
  %34 = load %struct.async_header*, %struct.async_header** %5, align 8
  %35 = getelementptr inbounds %struct.async_header, %struct.async_header* %34, i32 0, i32 1
  store i32* %33, i32** %35, align 8
  %36 = load i32*, i32** %6, align 8
  %37 = call i32 @IWbemObjectSink_AddRef(i32* %36)
  %38 = load i32, i32* @TRUE, align 4
  store i32 %38, i32* %4, align 4
  br label %39

39:                                               ; preds = %29, %23, %14
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i8* @CreateEventW(i32*, i32, i32, i32*) #1

declare dso_local i32 @CloseHandle(i8*) #1

declare dso_local i32 @IWbemObjectSink_AddRef(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
